# d3pm

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
examples/: README.md  chart_examples.ipynb  examples.ipynb  experiments.ipynb  graph_examples.ipynb
src/d3pm/: __init__.py  bridge.py
src/d3pm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/d3pm/charts/: BarChart.ts  BaseChart.ts  ChartComposer.ts  CompositeChart.ts  GraphChart.ts  GraphChart_archive.ts  HeatmapChart.ts  HistogramChart.ts  LineChart.ts  ScatterChart.ts  SvgToPng.ts  bar_chart.ts  composite.ts  line_chart.ts  scatter_plot.ts
